refactor input entry point

--- a/projects/sh-library/input/src/components/input/input.component.html
+++ b/projects/sh-library/input/src/components/input/input.component.html
@@ -1,2 +1,5 @@
-<p>Input works Muhahaha!!!</p>
-<span>{{text}}</span>
+<input [placeholder]="placeHolder" [(ngModel)]="value" />
+<br>
+<div>
+    <p>Local value: {{value}}</p>
+</div>
